--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
           name: Create distribution
           command: |
             printf "@tictrac:registry=https://tictrac.jfrog.io/artifactory/api/npm/npm/\nemail=developer@tictrac.com\nalways-auth=true\n_auth=$JFROG_AUTH_ENC\nhttps://registry.npmjs.org/" > ~/.npmrc
+            cat ~/.npmrc
             cd packages/ckeditor5-build-balloon-block
             npm publish --registry https://tictrac.jfrog.io/artifactory/api/npm/npm/
       - slack/status
